src/About.css
 :root {
    --black: #0e0e0e;
    --dark-blue: #a9bb34;
    --light-blue: #9BEAFF;
    --dark-red: #00da07;
    --dark-green: #3C8C05;
    --dark-yellow: #FDC71B;
    --light-yellow: #FEF669;
    --dark-chrome: #AEC1CB;
    --light-chrome: #E8ECEF;
    --white: #f5f2f2;
    font-size: 16px;
  }

  
  /* @keyframes animate {
    100% {
      transform: translate(-100%, 0);
    }
  } */
  
section {
  margin: 2rem 0;
  display: flex;
}
/*   
.about-content {
    background:linear-gradient(60deg,var(--dark-red),var(--dark-yellow),var(--dark-green),var(--dark-blue),var(--dark-blue));
    padding: 1rem;
  }
   */


  /* .img-bio {
    
  } */
  
  /* .bioSection h2 {
    /* font-size:1.5em; */
    /* line-height: 1.1em; */
    /* grid-area: 1 / 1 / 2 / 2; */
    /* text-align:right; */
    /* padding-left: 100px; */
  /* } */ 
  
  section img {
    width:250px;
    height:250px;
    object-fit:cover;
    /* border:2px solid brown; */
    /* grid-area: 1 / 2 / 2 / 3; */
    animation:border 10s infinite;
    border-radius:10%;
    /* margin */
  }
  
  @keyframes border {
    /* 0%  {outline:5px solid var(--dark-blue);}
    33% {outline:5px solid var(--dark-green);}
    66% {outline:5px solid var(--dark-red);}
    100% {outline:5px solid var(--dark-blue);} */
  } 
  
  p {
    grid-area: 1 / 3 / 2 / 7;
    /* padding-left: 10px; */
  }

  .textcol {
    color: black;
    background-color: #d4d7dc;
    padding: 10px;
    border-radius: 12px;  }

    .abtus {
      display: flex;
      justify-content: center;
      font-size: 5rem;
    }
    

